Closed Bug 1583408 Opened 5 years ago Closed 5 years ago

Mass CCov Assertion failure: mRawPtr != nullptr (You can't dereference a NULL RefPtr with operator->().), at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/RefPtr.h:307

Categories

(Core :: JavaScript Engine, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox69 --- unaffected
firefox70 --- unaffected
firefox71 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: tcampbell)

References

(Regression)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [stockwell disable-recommended])

Attachments

(1 file)

Filed by: csabou [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=268057816&repo=mozilla-central
Full log: https://queue.taskcluster.net/v1/task/PSVKSeF8T_qDB7wfwuG2lw/runs/0/artifacts/public/logs/live_backing.log


Th push: https://treeherder.mozilla.org/#/jobs?repo=mozilla-central&group_state=expanded&resultStatus=testfailed%2Cbusted%2Cexception&revision=2e3d007effb85aef6c368a964152dea8d1755ed9&searchStr=ccov&selectedJob=268057816

[task 2019-09-23T22:53:22.367Z] 22:53:22 INFO - TEST-PASS | tests/jit-test/jit-test/tests/auto-regress/bug1466626-3.js | Success (code 0, args "--no-blinterp --no-baseline --no-ion --more-compartments") [5.4 s]
[task 2019-09-23T22:53:33.154Z] 22:53:33 INFO - [CodeCoverage] Setting handlers for process 15613.
[task 2019-09-23T22:53:33.154Z] 22:53:33 INFO - Assertion failure: mRawPtr != nullptr (You can't dereference a NULL RefPtr with operator->().), at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/RefPtr.h:307
[task 2019-09-23T22:53:33.154Z] 22:53:33 INFO - Exit code: -11
[task 2019-09-23T22:53:33.154Z] 22:53:33 INFO - FAIL - auto-regress/bug1466626-4.js
[task 2019-09-23T22:53:33.155Z] 22:53:33 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/auto-regress/bug1466626-4.js | [CodeCoverage] Setting handlers for process 15613. (code -11, args "") [15.6 s]
[task 2019-09-23T22:53:33.155Z] 22:53:33 INFO - INFO exit-status : -11
[task 2019-09-23T22:53:33.155Z] 22:53:33 INFO - INFO timed-out : False
[task 2019-09-23T22:53:33.155Z] 22:53:33 INFO - INFO stderr 2> [CodeCoverage] Setting handlers for process 15613.
[task 2019-09-23T22:53:33.155Z] 22:53:33 INFO - INFO stderr 2> Assertion failure: mRawPtr != nullptr (You can't dereference a NULL RefPtr with operator->().), at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/RefPtr.h:307
[task 2019-09-23T22:53:34.141Z] 22:53:34 INFO - [CodeCoverage] Setting handlers for process 15619.
[task 2019-09-23T22:53:34.141Z] 22:53:34 INFO - Assertion failure: mRawPtr != nullptr (You can't dereference a NULL RefPtr with operator->().), at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/RefPtr.h:307
[task 2019-09-23T22:53:34.144Z] 22:53:34 INFO - Exit code: -11
[task 2019-09-23T22:53:34.146Z] 22:53:34 INFO - FAIL - auto-regress/bug1466626-4.js
[task 2019-09-23T22:53:34.147Z] 22:53:34 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/auto-regress/bug1466626-4.js | [CodeCoverage] Setting handlers for process 15619. (code -11, args "--ion-eager --ion-offthread-compile=off --more-compartments") [16.4 s]
[task 2019-09-23T22:53:34.149Z] 22:53:34 INFO - INFO exit-status : -11
[task 2019-09-23T22:53:34.151Z] 22:53:34 INFO - INFO timed-out : False
[task 2019-09-23T22:53:34.153Z] 22:53:34 INFO - INFO stderr 2> [CodeCoverage] Setting handlers for process 15619.
[task 2019-09-23T22:53:34.154Z] 22:53:34 INFO - INFO stderr 2> Assertion failure: mRawPtr != nullptr (You can't dereference a NULL RefPtr with operator->().), at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/RefPtr.h:307
[task 2019-09-23T22:53:34.696Z] 22:53:34 INFO - [CodeCoverage] Setting handlers for process 15625.
[task 2019-09-23T22:53:34.696Z] 22:53:34 INFO - Assertion failure: mRawPtr != nullptr (You can't dereference a NULL RefPtr with operator->().), at /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/RefPtr.h:307
[task 2019-09-23T22:53:34.699Z] 22:53:34 INFO - Exit code: -11
[task 2019-09-23T22:53:34.700Z] 22:53:34 INFO - FAIL - auto-regress/bug1466626-4.js
[task 2019-09-23T22:53:34.702Z] 22:53:34 WARNING - TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/auto-regress/bug1466626-4.js | [CodeCoverage] Setting handlers for process 15625. (code -11, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [16.6 s]
[task 2019-09-23T22:53:34.704Z] 22:53:34 INFO - INFO exit-status : -11
[task 2019-09-23T22:53:34.706Z] 22:53:34 INFO - INFO timed-out : False
[task 2019-09-23T22:53:34.707Z] 22:53:34 INFO - INFO stderr 2> [CodeCoverage] Setting handlers for process 15625.

These started mass failing after Bug 1578895 got into central. Toshi, could you please take a look?

Flags: needinfo?(tkikuchi)
Regressed by: 1578895

On a second look it might be from Bug 1578730. Ted, could you please over this? Thanks.

Flags: needinfo?(tkikuchi) → needinfo?(tcampbell)
Regressed by: 1578730
No longer regressed by: 1578895

When a JSScript is partially initialized we must detect this and not
generate coverage information. This incomplete script may still have an
entry in the ScriptLCovMap. The existing collectCodeCoverageInfo code
handled this correctly but the new CollectScriptCoverage function did
not.

Assignee: nobody → tcampbell
Status: NEW → ASSIGNED
Component: Launcher Process → JavaScript Engine
Flags: needinfo?(tcampbell)
Priority: P5 → P1
Product: Firefox → Core
Pushed by tcampbell@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/95a274d7de37
Handle uncompleted scripts correctly in LCov code. r=nbp
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: