Bug 1583408 - Handle uncompleted scripts correctly in LCov code. r=nbp

When a JSScript is partially initialized we must detect this and not
generate coverage information. This incomplete script may still have an
entry in the ScriptLCovMap. The existing collectCodeCoverageInfo code
handled this correctly but the new CollectScriptCoverage function did
not.

Differential Revision: https://phabricator.services.mozilla.com/D46888